changes to ssh path

--- a/app01_manifests/production-app01.yaml
+++ b/app01_manifests/production-app01.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: git@github.com:Thinnesen/tradingaps_manifest.git
+    repoURL: ssh://git@github.com:Thinnesen/tradingaps_manifest.git
     targetRevision: HEAD
     path: app01_manifests/production/
     directory:
