--- a/app01_manifests/production/ingress-resource.yaml
+++ b/app01_manifests/production/ingress-resource.yaml
@@ -15,7 +15,7 @@ spec:
             name: app01-service
             port: 
               number: 80
-  tls:
-  - hosts:
-      - app01.tradingaps.com
-    secretName: app01
+#  tls:
+#  - hosts:
+#      - app01.tradingaps.com
+#    secretName: app01
