--- a/cluster_ressources/certmanager/acme-clusterissue.yaml
+++ b/cluster_ressources/certmanager/acme-clusterissue.yaml
@@ -1,3 +1,4 @@
+#ClusterIssuer til benyttelse af SSL certs på tværs af alle namespaces 
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
