--- a/manifests_website/production-app01.yaml
+++ b/manifests_website/production-app01.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: production-app01
+  name: website-production
   namespace: argocd
 spec:
   project: default
@@ -13,7 +13,7 @@ spec:
       recurse: false
   destination:
     server: https://kubernetes.default.svc
-    namespace: production-app01
+    namespace: website-production
   syncPolicy:
     automated:
       prune: true
