--- a/manifests_demoapp01/production-demoapp.yaml
+++ b/manifests_demoapp01/production-demoapp.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: production-demoapp01
+  name: demoapp-production
   namespace: argocd
 spec:
   project: default
@@ -13,7 +13,7 @@ spec:
       recurse: false
   destination:
     server: https://kubernetes.default.svc
-    namespace: production-demoapp01
+    namespace: demoapp-production
   syncPolicy:
     automated:
       prune: true
