--- a/manifests_website/base/kustomization.yaml
+++ b/manifests_website/base/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: app01
+namespace: website
 resources:
   - app-deployment.yaml
   - service.yaml
@@ -8,4 +8,4 @@ resources:
 
 commonLabels:
   owner: tradingaps
-  app: app01
+  app: website
