--- a/manifests_website/base/service.yaml
+++ b/manifests_website/base/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: app01-service
+  name: website-service
   labels:
-    app: app01
+    app: website
 spec:
   ports:
   - port: 80
     protocol: TCP
   selector:
-    app: app01
+    app: website
