--- a/manifests_website/production/ingress-resource.yaml
+++ b/manifests_website/production/ingress-resource.yaml
@@ -1,21 +1,21 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: app01-ingress-rule
+  name: website-ingress-rule
 spec:
   ingressClassName: nginx
   rules:
-  - host: app01.tradingaps.com
+  - host: website.tradingaps.com
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: app01-service
+            name: website-service
             port: 
               number: 80
 #  tls:
 #  - hosts:
-#      - app01.tradingaps.com
-#    secretName: app01
+#      - website.tradingaps.com
+#    secretName: website
