--- a/manifests_website/production/service-loadbalancer.yaml
+++ b/manifests_website/production/service-loadbalancer.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: app01-lb
+  name: website-lb
   labels:
-    app: app01
+    app: website
 spec:
   type: LoadBalancer
   ports:
-  - name: app01
+  - name: website
     port: 80
     targetPort: 80
   selector:
-    app: app01
+    app: website
