--- a/manifests_website/production/ssl-certificate.yaml
+++ b/manifests_website/production/ssl-certificate.yaml
@@ -1,11 +1,11 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: app01
+  name: website
 spec:
-  secretName: app01
+  secretName: website
   issuerRef:
     name: acme-issuer
     kind: ClusterIssuer
   dnsNames:
-  - 'app01.tradingaps.com'
+  - 'website.tradingaps.com'
