delay added for pod

--- a/manifests_demoapp01/production/increase_replicas.yaml
+++ b/manifests_demoapp01/production/increase_replicas.yaml
@@ -5,3 +5,9 @@ metadata:
 spec:
   replicas: 1
   revisionHistoryLimit: 1
+      spec:
+      containers:
+        - name: demoapp01
+          initialDelaySeconds: 10
+          periodSecnds: 5
+          timeoutSeconds: 2
