--- a/.github/workflows/update-app-production-demoapp.yml
+++ b/.github/workflows/update-app-production-demoapp.yml
@@ -2,7 +2,7 @@ name: Repository Dispatch
 
 on:
   repository_dispatch:
-    types: [new-image-production]
+    types: [new-image-production_demoapp]
 jobs:
   build:
     runs-on: ubuntu-latest
