--- a/manifests_website/production/ingress-resource.yaml
+++ b/manifests_website/production/ingress-resource.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: website.tradingaps.com
+  - host: tradingaps.com
     http:
       paths:
       - path: /
