--- a/manifests_website/production/kustomization.yaml
+++ b/manifests_website/production/kustomization.yaml
@@ -8,6 +8,6 @@ resources:
 #  - service-loadbalancer.yaml
   - ingress-resource.yaml
   - ssl-certificate.yaml
-  - verticalpa.yaml
+#  - verticalpa.yaml
 patches:
   - increase_replicas.yaml
