--- a/manifests_website/production/verticalpa.yaml
+++ b/manifests_website/production/verticalpa.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   targetRef:
     apiVersion: "apps/v1"
-    kind:       Deployment
-    name:       website
+    kind: Deployment
+    name: production-website
   updatePolicy:
     updateMode: "auto"
