--- a/manifests_website/production/verticalpodautoscaler.yaml
+++ b/manifests_website/production/verticalpodautoscaler.yaml
@@ -1,4 +1,4 @@
-apiVersion: autoscaling.k8s.io/v1beta1
+apiVersion: autoscaling.k8s.io/v1
 kind: VerticalPodAutoscaler
 metadata:
   name: website-vpa
@@ -8,4 +8,4 @@ spec:
     kind: Deployment
     name: production-website
   updatePolicy:
-    updateMode: "Off"
+    updateMode: "Auto"
