--- a/manifests_website/production/increase_replicas.yaml
+++ b/manifests_website/production/increase_replicas.yaml
@@ -4,6 +4,11 @@ metadata:
   name: website
 spec:
   replicas: 3
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   template:
     metadata:
       labels:
