--- a/manifests_website/production/increase_replicas.yaml
+++ b/manifests_website/production/increase_replicas.yaml
@@ -9,11 +9,11 @@ spec:
     rollingUpdate:
       maxSurge: 1
       maxUnavailable: 0
-    spec:
-      resources:
-        requests:
-          memory: "50Mi"
-          cpu: "30m"
-        limits:
-          memory: "500Mi"
-          cpu: "2000m"
+#    spec:
+#      resources:
+#        requests:
+#          memory: "50Mi"
+#          cpu: "30m"
+#        limits:
+#          memory: "500Mi"
+#          cpu: "2000m"
