--- a/manifests_website/base/app-deployment.yaml
+++ b/manifests_website/base/app-deployment.yaml
@@ -6,6 +6,11 @@ metadata:
     app: website-deployment
 spec:
   replicas: 1
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   selector:
     matchLabels:
       app: website
@@ -17,3 +22,10 @@ spec:
       containers:
         - name: website
           image: thinnesen/website-tradingaps:15
+          resources:
+            requests:
+              memory: "25Mi"
+              cpu: "27m"
+            limits:
+              memory: "600Mi"
+              cpu: "2000m"
