--- a/manifests_website/production/kustomization.yaml
+++ b/manifests_website/production/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - ingress-resource.yaml
   - ssl-certificate.yaml
   - verticalpodautoscaler.yaml
-  - horizontalpodautoscaler.yaml
+#  - horizontalpodautoscaler.yaml
 patches:
   - increase_replicas.yaml
+  - horizontalpodautoscaler.yaml
