--- a/manifests_website/production/horizontalpodautoscaler.yaml
+++ b/manifests_website/production/horizontalpodautoscaler.yaml
@@ -5,3 +5,7 @@ metadata:
 spec:
   maxReplicas: 10
   minReplicas: 3
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: production-website
