--- a/manifests_website/production/kustomization.yaml
+++ b/manifests_website/production/kustomization.yaml
@@ -11,7 +11,7 @@ resources:
   - verticalpodautoscaler.yaml
 #  - horizontalpodautoscaler.yaml
 patches:
+  - increase_hpa.yaml
   - increase_replicas.yaml
- # - increase_hpa.yaml
 patchesStrategicMerge:
-  - "increase_hpa.yaml"
+#  - "increase_hpa.yaml"
