--- a/manifests_website/base/kustomization.yaml
+++ b/manifests_website/base/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - app-deployment.yaml
   - service.yaml
   - namespace.yaml
+  - horizontalpodautoscaler.yaml
 
 commonLabels:
   owner: tradingaps
