changes to kustomize

--- a/manifests_website/production/kustomization.yaml
+++ b/manifests_website/production/kustomization.yaml
@@ -9,6 +9,6 @@ resources:
   - ssl-certificate.yaml
   - verticalpodautoscaler.yaml
 patches:
-#  - increase_replicas.yaml
+  - increase_replicas.yaml
   - increase_hpa.yaml
 
