--- a/manifests_website/staging/kustomization.yaml
+++ b/manifests_website/staging/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: staging-app01
+namespace: staging-website
 bases:
   - ../base
 namePrefix: staging-
