revision history limit added

--- a/manifests_website/base/app-deployment.yaml
+++ b/manifests_website/base/app-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: website-deployment
 spec:
-#  replicas: 1
+  revisionHistoryLimit: 1
   strategy:
     type: RollingUpdate
     rollingUpdate:
