--- a/manifests_demoapp01/dev/kustomization.yaml
+++ b/manifests_demoapp01/dev/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: production-demoapp01
+namespace: dev-demoapp01
 bases:
   - ../base
 namePrefix: dev-
