ssl-cert renew timer set

--- a/manifests_website/production/ssl-certificate.yaml
+++ b/manifests_website/production/ssl-certificate.yaml
@@ -4,6 +4,8 @@ metadata:
   name: website
 spec:
   secretName: website
+  duration: 90d
+  renewBefore: 240h
   issuerRef:
     name: acme-issuer
     kind: ClusterIssuer
