--- a/manifests_website/production/kustomization.yaml
+++ b/manifests_website/production/kustomization.yaml
@@ -9,5 +9,5 @@ resources:
 #  - ssl-certificate.yaml
 #  - verticalpodautoscaler.yaml
 patches:
-  - increase_hpa_count.yaml
+#  - increase_hpa_count.yaml
 
