--- a/manifests_website/base/app-deployment.yaml
+++ b/manifests_website/base/app-deployment.yaml
@@ -6,6 +6,7 @@ metadata:
     app: website-deployment
 spec:
   revisionHistoryLimit: 1
+  replicas: 3
   strategy:
     type: RollingUpdate
     rollingUpdate:
